kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: racarlosdavid/kcd_frontend
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-webapp
  labels:
    app: webapp
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-deployment
  labels:
    app: grpc-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: grpc-deployment
  template:
    metadata:
      labels:
        app: grpc-deployment
    spec:
      containers:
        - name: grpc-client-api
          image: racarlosdavid/grpc_client_api
          ports:
            - containerPort: 3000
        - name: grpc-server
          image: racarlosdavid/grpc_server
          ports:
            - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: svc-grpc
  labels:
    app: grpc-deployment
spec:
  type: ClusterIP
  selector:
    app: grpc-deployment
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
